force-app/main/default/objects/Pricing_Tier__c/Pricing_Tier__c.object-meta.xml
<CustomObject>
    <label>Pricing Tier</label>
    <nameField>
        <label>Pricing Tier Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pricing Tiers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>