force-app/main/default/objects/Pricing_Tier__c/fields/From_Quantity__c.field-meta.xml
<CustomField>
    <fullName>From_Quantity__c</fullName>
    <label>From Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>