force-app/main/default/objects/Pricing_Tier__c/fields/Tier_Number__c.field-meta.xml
<CustomField>
    <fullName>Tier_Number__c</fullName>
    <label>Tier Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>