force-app/main/default/objects/Pricing_Tier__c/fields/To_Quantity__c.field-meta.xml
<CustomField>
    <fullName>To_Quantity__c</fullName>
    <label>To Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>